logs/elexon_update_20250921.log
Traceback (most recent call last):
  File "/Users/georgemajor/jibber-jabber 24 august 2025 big bop/ingest_elexon_fixed.py", line 1030, in <module>
    from bigquery_utils import load_dataframe_with_schema_adaptation, BigQueryQuotaManager, load_dataframe_with_retry
  File "/Users/georgemajor/jibber-jabber 24 august 2025 big bop/bigquery_utils.py", line 122
    def load_dataframe_with_schema_adaptation(    client: bigquery.Client,    df,    project: str,    dataset: str,    table_name: str,    write_disposition: str = "WRITE_APPEND",    load_timeout_sec: int = 600,    auto_add_schema_fields: bool = True,) -> bool:    """    Load a DataFrame to BigQuery with improved schema adaptation.        This function:    1. Checks the existing schema of the table    2. Filters DataFrame columns to match the schema    3. Adds missing schema fields if needed    4. Handles the bytestring length issue with hash fields        Args:        client: BigQuery client        df: Pandas DataFrame to load        project: BigQuery project ID        dataset: BigQuery dataset ID        table_name: BigQuery table name        write_disposition: BigQuery write disposition        load_timeout_sec: Timeout for load job in seconds        auto_add_schema_fields: Whether to add missing schema fields automatically            Returns:        bool: True if load was successful, Fa
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           ^
SyntaxError: invalid syntax
